--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,13 @@
 /*  your css code here. If applicable */
+#yellow{
+	border: 1px solid green;
+	background-color: yellow;
+}
+#red{
+	border: 1px solid black;
+	background-color: red;
+}
+#green{
+	border: 1px solid yellow;
+	background-color: green;
+}
